[UPDATE] Code refactor